styles.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&display=swap');

:root {
  --background-gray: #f9fafc;
  --credit-gray: hsla(220, 13%, 91%, 0.3);
  --logo-container-black: rgba(0, 0, 0, 0.3);
  --form-header-black: rgb(20, 19, 19);
  --input-border-gray: rgba(77, 73, 73, 0.267);
  --input-label-gray: rgb(63, 63, 63);
  --input-invalid-border: rgb(189, 43, 43);
  --input-valid-green: rgb(34, 138, 34);
  --input-valid-green-bg: rgba(103, 161, 103, 0.089);
  --input-invalid-bg: rgba(189, 56, 56, 0.212);
  --input-error-message: rgba(180, 86, 86, 0.897);
  --button-green: rgb(92, 114, 85);
}

/* General Layout */

* {
  outline: none;
  box-sizing: border-box;
  font-family: 'Oswald', sans-serif;
}

html,
main {
  padding: 0;
  margin: 0;
  overflow: hidden;
}

main {
  display: flex;
  height: 100vh;
  width: 100vw;
}

.side-hero {
  background-image: url(./images/castle.jpg);
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: clamp(320px, 33vw, 600px);
  padding-bottom: 40px;
}

.credit {
  color: var(--credit-gray);
}

.credit > a {
  color: inherit;
}

.logo-container {
  background-color: var(--logo-container-black);
  position: relative;
  top: 20%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
  overflow: hidden;
  width: 100%;
  color: var(--background-gray);
}

img + p {
  font-size: 4rem;
  font-weight: bold;
}

.form-side {
  background-color: var(--background-gray);
  padding: 40px 0px;
  width: 100%;
}

img {
  width: 80px;
}

.form-side {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  gap: 40px;
}

.greetings {
  font-size: 1.5rem;
  line-height: 1.4em;
  word-wrap: break-word;
}

.greetings > p {
  margin: 30px;
  margin-right: max(1px, 40vw);
}

em {
  font-weight: bold;
  margin: 5px;
}

/* Form */

form {
  background-color: white;
  width: 100%;
  height: 350px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 15px 0 60px;
  box-shadow: 2px 3px 4px rgba(0,0,0,0.2);
}

h1 {
  font-size: 1.5rem;
  color: var(--form-header-black);
  width: 100%;
  text-align: left;
  padding-left: 30px;
  margin-bottom: 10px;
}

.form-line {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 30px;
  margin-left: 60px;
  margin-top: 30px;
  width: 100%;
}

.input-container {
  display: flex;
  flex-direction: column;
}

label {
  font-size: 0.7rem;
  color: var(--input-label-gray);
  letter-spacing: 1px;
  font-weight: 500;
}

input {
  width: 270px;
  border: 1px solid var(--input-invalid-border);
  background-color: var(--input-invalid-bg);
  border-radius: 4px;
  height: 30px;
  margin-top: 3px;
  font-size: 1rem;
  padding: 10px;
  letter-spacing: 1.5px;
  font-weight: 100;
  transition: all 0.1s;
}

input:focus {
  outline: 2px solid rgb(38, 38, 192);
  box-shadow: 7px 4px 10px -5px;
  transition: all 0.1s;
}

input:placeholder-shown {
  border-color: var(--input-border-gray);
  background-color: white;
}


input[type='text']:valid,
input[type='tel']:valid,
input[type='email']:valid {
  border: 1px solid var(--input-valid-green);
  background-color: var(--input-valid-green-bg);
}

/* Email Error Span */

input[type='email']:placeholder-shown + span {
  visibility: hidden;
}

input[type='email']:invalid + span::before {
  content: '*Email doesn\'t look right';
  position: absolute;
  color: var(--input-error-message);
  margin-top: 3px;
  font-size: 0.7rem;
}

/* Mail Error Span */
input[type='tel']:placeholder-shown + span {
  visibility: hidden;
}

input[type='tel']:invalid + span::before {
  content: '*Enter the number according to Czech format';
  position: absolute;
  color: var(--input-error-message);
  margin-top: 3px;
  font-size: 0.7rem;
}

/* Password Validation */
input[type='password'] {
  border-color: var(--input-border-gray);
  background-color: white;
}

#password.matching_passwords,
#conf_password.matching_passwords {
  border-color: var(--input-valid-green);
  background-color: var(--input-valid-green-bg);
}

#password.no_match,
#conf_password.no_match {
  border-color: var(--input-invalid-border);
  background-color: var(--input-invalid-bg);
}

#conf_password.no_match + span::before {
  position: absolute;
  content: '*Passwords do not match';
  color: var(--input-error-message);
  font-size: 0.7rem;
}

/* Footer and Button */
button {
  margin-left: 30px;
  width: 200px;
  height: 50px;
  border: none;
  border-radius: 9px;  
  background-color: var(--button-green);
  color: white;
  font-size: 1rem;
  letter-spacing: 1px;
  padding: 5px;
  box-shadow: 2px 3px 4px -1px rgba(0, 0, 0, 0.281);
  transition: all ease-in 0.4s;
}

button + p {
  margin: 30px 30px;
  font-weight: 100;
  letter-spacing: 0.5px;
}

button:hover {
  background-color: var(--background-gray);
  color: var(--form-header-black);
  transition: all ease-out 0.4s;
}

button:active {
  margin-top: 4px;
}

button:focus {
  border: 1px dotted var(--input-label-gray);
}
p a {
  color: var(--button-green);
  font-weight: 500;
}

@media only screen and (max-width: 700px) {
  input {
    width: 100px
  }
}

